# etl-for-all-studies

./: .gitignore  README.md  chopan_email_agent.py  example.db  kimi_coding_agent_v5.py  pyproject.toml  requirements.txt
artifacts/: artifacts.db
config/: config.example.yaml  example_config.yaml  field_mappings.example.yaml  filter_genes.tsv
docs/: genomic-etl-requirements.md  requirements_plan.json
migrations/: mssql.sql  sqlite.sql
scripts/: run_correlation_job.py  run_etl.py  run_gene_corr_etl.py
src/bioinformatics_etl_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cli/: commands.py  main.py  validators.py
src/db/: engine.py  models.py  mssql.py  sqlite.py
src/etl/: checkpoint.py  discovery.py  loader.py  rollback.py  transform.py
src/etl_for_all_studies/: __init__.py  config.py  correlation.py  correlation_etl.py  correlation_job.py  database.py  expression_processing.py  gene_filter.py  logging_utils.py  metadata_processing.py  models.py  pipeline.py  repositories.py
src/utils/: file_utils.py  logging_setup.py  metrics.py
tests/: test_correlation.py  test_correlation_job.py  test_discovery.py  test_expression_processing.py  test_loader.py  test_metadata_processing.py  test_pipeline.py  test_repositories.py  test_requirements_ingest.py  test_resume.py  test_transform.py
